# organoids

./: .gitignore  README.md  colhosp.permutation  pyproject.toml
organoids/: __main__.py  utils.py
organoids/commands/: analyze.py  cifarx.py  evaluate.py  ocr.py  prune.py  rank.py  segment.py
scripts/: barchart.py  boxplot.py  corr.py  plot.sh
