[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "organoids"
version = "1.0.0"
authors = [
  { name = "Peter Schneider-Kamp" }
]

description = "A segmentation and area estimation for organoids on microscope images."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'click',
    'exif',
    'labelme',
    'opencv-python',
    'shapely',
    'torch',
    'torchvision',
    'transformers',
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/organoids"
"Bug Tracker" = "https://github.com/schneiderkamplab/organoids/issues"

[tool.hatch.build]
include = [
    'organoids',
    'LICENSE',
    'README.md',
]
